// Load this file using:
// var builder = ProtoBuf.loadProtoFile("nfd-status.proto");

package ndn_message;

// Protobuf has no "outer" message type, so we need to put the TLV FaceStatus
// message inside an outer "typeless" ForwardingStatus.
message NFDForwardingStatusMessage {
    required bytes version              = 128;
    required uint32 start_time           = 129;
    required uint32 current_time         = 130;
    required uint32 name_tree_entries    = 131;
    required uint32 fib_entries          = 132;
    required uint32 pit_entries          = 133;
    required uint32 measure_entires      = 134;
    required uint32 cs_entires           = 135;

    required uint32 in_interests         = 144;
    required uint32 in_data              = 145;
    required uint32 out_interests        = 146;
    required uint32 out_data             = 147;
}
